test/Fail/Issue2487.agda
module Issue2487 where

open import Issue2487.b
